# transcriptor

./: README.md  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts
src/: app.html  app.pcss  paperwork.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/src/llm/: mod.rs
src/lib/Utils/: stores.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
src/routes/transcriptor/: +page.svelte
